WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153681
fast/shadow-dom/Element-interface-attachShadow.html fails on iOS
https://bugs.webkit.org/show_bug.cgi?id=153681
Summary
fast/shadow-dom/Element-interface-attachShadow.html fails on iOS
Ryosuke Niwa
Reported
2016-01-29 15:46:07 PST
fast/shadow-dom/Element-interface-attachShadow.html is failing on iOS because we don't have meter element enabled there.
Attachments
Fixes the bug
(3.07 KB, patch)
2016-01-29 15:59 PST
,
Ryosuke Niwa
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-01-29 15:48:18 PST
<
rdar://problem/24419868
>
Ryosuke Niwa
Comment 2
2016-01-29 15:59:12 PST
Created
attachment 270270
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2016-01-29 16:06:53 PST
Committed
r195863
: <
http://trac.webkit.org/changeset/195863
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug