fast/shadow-dom/Element-interface-attachShadow.html fails on iOS https://bugs.webkit.org/show_bug.cgi?id=153681

Reviewed by Antti Koivisto.

Source/WebCore:

The bug was caused by canHaveUserAgentShadowRoot() returning false on a meter element since it's disabled on iOS.
Override HTMLUnknownElement's canHaveUserAgentShadowRoot to return false for compatbility on iOS.

* html/HTMLUnknownElement.h:
(WebCore::HTMLUnknownElement::canHaveUserAgentShadowRoot):

LayoutTests:

Enable shadow DOM and custom elements tests on iOS; matches that's in platform/mac/TestExpectations.

* platform/ios-simulator/TestExpectations:


Canonical link: https://commits.webkit.org/171744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195863 268f45cc-cd09-0410-ab3c-d52691b4dbfc