Source/WebCore/html/HTMLUnknownElement.h
@@ -47,6 +47,12 @@ private:
     {
     }
 
+#if ENABLE(METER_ELEMENT)
+    virtual bool canHaveUserAgentShadowRoot() const override final { return false; }
+#else
+    virtual bool canHaveUserAgentShadowRoot() const override final { return localName() == "meter"; }
+#endif
+
     virtual bool isHTMLUnknownElement() const override { return true; }
 };
 
